SERVER-131792 Fix initialization order problem with numCommandsTargetingSystemBuckets (#59141)

GitOrigin-RevId: cd16eb65ea856c29bec6c4585f02d7e4bbded35e